--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 	       d > 170000 ? '#a50f15' :
 	       d > 110000 ? '#cb181d' :
 	       d > 57000 ? '#ef3b2c' :
-	        		        '#fcbba1';
+	                   '#fcbba1';
       }	    
       function infoPoblacion(feature, layer) {
 	var popupContent = "Densidad polacional: ";
@@ -56,7 +56,7 @@
 	  return {
 	    weight: 2,
 	    opacity: 1,
-	    color: 'white',
+	    color: 'red',
 	    dashArray: '3',
 	    fillOpacity: 0.7,		  
             fillColor: color(feature.properties.POB_2011_T)
@@ -101,7 +101,7 @@
 	  popupContent += feature.properties.scientif_1;
 	}
 	layer.bindPopup(popupContent);
-      }	    
+      },	    
 	    
 	    
       registrosPresencia = L.geoJson(regpresencia, {
@@ -132,7 +132,7 @@
       };
       var overlays = {
 	"Riqueza de especies": riqueza,
-	"Registros de presencia": registrosPresencia
+	"Registros de presencia": registrosPresencia,
 	"Densidad poblacional": poblacion
       };
       L.control.layers(baseLayers, overlays).addTo(mapa);
