--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
 
     <script src="js/riqespecies_avesacures-cr_ramsar-2017-wgs84.js" type="text/javascript"></script>
     <script src="js/regPresGBIFAvesAcuRes-cr_ramsar-2017-wgs84.js"  type="text/javascript"></script>
+    <script src="js/Cantones2014wgs84.js"  type="text/javascript"></script>
 
     <script>
       var mapa = L.map('map').setView([9.7, -84], 8);
